modify ui and models

--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -7,10 +7,10 @@
         <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a>
 
 
-            <a href="#" class="brand-logo center">
-               weStories
-            </a>
-      
+        <a href="#" class="brand-logo center">
+            weStories
+        </a>
+
 
 
         <span>
@@ -62,10 +62,13 @@
     <li>
         <div class="divider"></div>
     </li>
-    <li><a class="red darken-1 waves-effect waves-light btn" href="/auth/google"><i class="fa fa-google-plus"
-                aria-hidden="true"></i>Login with google</a></li>
-    {{/if}}
-
-
-
+    <li>
+        <div class="center-align">
+            <a class="red darken-1 waves-effect waves-light btn" href="/auth/google"><i class="fa fa-google-plus"
+                aria-hidden="true"></i> Login with google</a>
+        </div>
+        
+    </li>
 </ul>
+
+{{/if}}
