added ui and routes

--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -1,6 +1,11 @@
-<h1>Welcome</h1>
-<p>Welcome to weStories v1.0.0</p>
-<p>Post stories from anything under the Sun!</p>
-<p>You can have post it publicly for the world to see or privately as your personal Diary!</p>
-<a class="red darken-1 waves-effect waves-light btn" href="/auth/google"><i class="fa fa-google-plus"
+<div id="welcome">
+    <div class="container">
+        <h1>Welcome</h1>
+        <p>Welcome to weStories v1.0.0</p>
+        <p>Post stories from anything under the Sun!</p>
+        <p>You can have post it publicly for the world to see</p>
+        <p>or privately as your personal Diary!</p>
+        <a class="red darken-1 waves-effect waves-light btn" href="/auth/google"><i class="fa fa-google-plus"
                 aria-hidden="true"></i> Login with google</a>
+    </div>
+</div>
