--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,34 @@
 body {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
+
+nav {
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-bottom: 0;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+#welcome {
+    background-image: url('https://images.pexels.com/photos/261577/pexels-photo-261577.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-size: cover;
+    background-position: center;
+    height: 90vh;
+    padding-top: 50px;
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+.footer-copyright {
+    border-top: 0.5px white solid;
+}
+
+
+/* .footer1 {
+    border-right: 1px white solid;
+} */
