--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,8 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed|Roboto+Slab|Open+Sans+Condensed:300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <title>weStories</title>
 </head>
@@ -21,10 +22,11 @@
         {{>_header}}
     </header>
     <main>
-        <div class="container">
-            {{{body}}}
-        </div>
+
+        {{{body}}}
+
     </main>
+    {{>_footer}}
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- Compiled and minified JavaScript -->
@@ -32,6 +34,17 @@
     <script>
         $(document).ready(function () {
             $('.sidenav').sidenav();
+        });
+
+        document.addEventListener('DOMContentLoaded', function () {
+            var elems = document.querySelectorAll('.parallax');
+            var instances = M.Parallax.init(elems, options);
+        });
+
+        // Or with jQuery
+
+        $(document).ready(function () {
+            $('.parallax').parallax();
         });
     </script>
 </body>
