--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -1,11 +1,22 @@
 <div id="welcome">
     <div class="container padTopBot">
-        <h1>Welcome</h1>
-        <p>Welcome to weStories v1.0.0<br>
-            Post stories from anything under the Sun!<br>
-            You can have post it publicly for the world<br>
-            to see or privately as your personal Diary!</p>
-        <a class="red darken-1 waves-effect waves-light btn" href="/auth/google"><i class="fa fa-google-plus"
-                aria-hidden="true"></i> Login with google</a>
+        <div class="row">
+            <div class="col s12 m8">
+                <div class="card-panel teal">
+                    <div class="card-title"><h3>Welcome!</h3></div>
+                    <p class="white-text welcome-text">Welcome to weStories v1.0.0
+                        Post stories from anything under the Sun!
+                        You can have post it publicly for the world
+                        to see or privately as your personal Diary!
+                    </p>
+                    
+                    <div class="card-action">
+                        <a class="red darken-1 waves-effect waves-light btn" href="/auth/google"><i
+                                class="fa fa-google-plus" aria-hidden="true"></i> Login with google</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
