--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -1,7 +1,7 @@
 <div class="container padTopBot">
     <div class="row">
         <div class="col s12 m8">
-            <h3>{{story.title}}</h3>
+            <h3 class="show-card">{{story.title}}</h3>
             <span class="card-title grey-text">{{formatDate story.date 'MMMM Do YYYY, h:mm a'}}</span>
             <div class="card-panel blue lighten-5">
                 {{{story.body}}}
@@ -12,7 +12,7 @@
                 <div><span class="card-title black-text">{{story.user.firstName}} {{story.user.lastName}}</span></div>
                     <img class="circle responsive-img" src="{{story.user.image}}" width="200">
                 <div class="card-action">
-                    <a href="/stories/user/{{story.user.id}}" class="btn grey">Check My Stories</a>
+                    <a href="/dashboard" class="btn grey">Check My Stories</a>
                 </div>
             </div>
         </div>
