--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -1,5 +1,5 @@
 <div class="container padTopBot">
-    <h3 class="show-card">Welcome, {{user.firstName}}</h3>
+    <h3 class="show-card">Welcome, {{currentUser.firstName}}</h3>
     <div class="divider"></div>
     <h4 class="show-card">Your Stories</h4>
     {{#if stories}}
@@ -21,11 +21,11 @@
                 <td class="tb-padding">{{formatDate date 'MMMM Do YYYY'}}</td>
                 <td class="tb-padding">{{status}}</td>
                 <td>
-                    <a href="/stories/edit/{{id}}" class="btn-small blue waves-effect waves-light"><id
-                            class="fa fa-pencil" aria-hidden="true"></i>   E  D  I  T</a>
+                    <a href="/stories/edit/{{id}}" class="btn-small blue waves-effect waves-light edit" title="Edit"><i
+                            class="fa fa-pencil" aria-hidden="true"></i></a>
                     <form id="delete-btn" action="/stories/{{id}}?_method=DELETE" method="post">
                         <input type="hidden" name="_method" value="DELETE">
-                        <button type="submit" class="btn-small left-align red waves-effet waves-light"><i class="fa fa-times" aria-hidden="true"></i>DELETE</button>
+                        <button type="submit" class="btn-small left-align red waves-effet waves-light" title="Delete" data-confirm ="Are you sure you want to delete?"><i class="fa fa-times" aria-hidden="true"></i></button>
                     </form>
                 </td>
             </tr>
