--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -4,8 +4,8 @@
         <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a>
         <a href="/" class="brand-logo center">weStories</a>
         <ul id="nav-mobile" class="right">
-            {{#if user}}
-            <li class="hide-on-small-only"><a href="#">Hi <em>{{user.firstName}}</em> </a></li>
+            {{#if currentUser}}
+            <li class="hide-on-small-only"><a href="#">Hi <em>{{currentUser.firstName}}</em> </a></li>
             {{else}}
             {{/if}}
             <li class="hide-on-med-and-down"><a href="/stories">Public Stories <i class="fa fa-book"
@@ -18,16 +18,16 @@
 
 {{!-- side menu --}}
 <ul id="slide-out" class="sidenav">
-    {{#if user}}
+    {{#if currentUser}}
         <li>
             <div class="user-view">
                 <div class="background">
                     <img
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTw7ScgPKbLLFmgwBds7kDVBb3AO8quJM3rJlpw71hydCcw8Gxt">
                 </div>
-                <a href="#user"><img class="circle" src="{{user.image}}"></a>
-                <a href="#name"><span class="white-text name">{{user.firstName}} {{user.lastName}}</span></a>
-                <a href="#email"><span class="white-text email">{{user.email}}</span></a>
+                <a href="#user"><img class="circle" src="{{currentUser.image}}"></a>
+                <a href="#name"><span class="white-text name">{{currentUser.firstName}} {{currentUser.lastName}}</span></a>
+                <a href="#email"><span class="white-text email">{{currentUser.email}}</span></a>
             </div>
         </li>
         <li><a href="/stories"><i class="material-icons">library_books</i>Public Stories</a></li>
