--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -3,7 +3,7 @@
     <div class="divider"></div>
     <div class="row">
         {{#each stories}}
-        <div class="col s12 m4">
+        <div class="col s12 m6 l4">
             <div class=" card yellow lighten-4 center-align hoverable">
                 <div class="card-image">
                     <a href="/stories/edit/{{id}}" class="btn-floating halfway-fab waves-effect waves-light red"
