--- a/views/index/about.handlebars
+++ b/views/index/about.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
     <h1>About</h1>
     <p>Version 1.0.0</p>
-    <p>weStories is an app to post your stories from anything and everything under the sun.</p>
+    <p>weStories is an app to post your stories and ideas from anything and everything under the sun.</p>
 </div>
