--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -7,7 +7,8 @@
                     <p class="white-text welcome-text">Welcome to weStories v1.0.0
                         Post stories from anything under the Sun!
                         You can have post it publicly for the world
-                        to see or privately as your personal Diary!
+                        to see or privately as your personal Diary!<br>
+                        <p class="yellow-text">(Upon Login, Click the red plus button to Add Story!)</p>
                     </p>
                     
                     <div class="card-action">
