--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -34,7 +34,7 @@
         <li><div class="divider"></div></li>
         <li><a href="/"><i class="fa fa-cog" aria-hidden="true"></i>Dashboard</a></li>
         <li><div class="divider"></div></li>
-        <li><a href="/stories/show"><i class="fa fa-archive" aria-hidden="true"></i>My Stories</a></li>
+        <li><a href="/stories/my"><i class="fa fa-archive" aria-hidden="true"></i>My Stories</a></li>
         <li><div class="divider"></div></li>
         <li><a href="/auth/logout"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
     {{else}}
