--- a/views/partials/_add-btn.handlebars
+++ b/views/partials/_add-btn.handlebars
@@ -1,3 +1,5 @@
- <div class="fixed-action-btn">
- <a href="/stories/add" class="btn-floating btn-large waves-effect waves-light red"><i class="fa fa-plus" aria-hidden="true"></i></a>
- </div>
+<div class="fixed-action-btn">
+    {{!-- <div class="white-text">Add Story</div> --}}
+    <a href="/stories/add" class="btn-floating btn-large waves-effect waves-light red"><i class="fa fa-plus"
+            aria-hidden="true"></i></a>
+</div>
