--- a/views/stories/add.handlebars
+++ b/views/stories/add.handlebars
@@ -4,7 +4,7 @@
         <form action="/stories" method="post" class="col s12">
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="title" type="text" class="validate" name="title">
+                    <input id="title" type="text" class="validate" name="title" required>
                     <label for="password">Title</label>
                 </div>
             </div>
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <h5>Tell us your story:</h5>
-                    <textarea id="body" class="materialize-textarea" name="body"></textarea>
+                    <textarea id="body" class="materialize-textarea" name="body" required></textarea>
                 </div>
             </div>
             <button class="btn waves-effect waves-light" type="submit">SAVE
