--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -5,19 +5,23 @@
         {{#each stories}}
         <div class="col s12 m6 l4">
             <div class=" card yellow lighten-4 center-align hoverable">
+                {{#ifEquals user.id '==' @root.currentUser.id}}
                 <div class="card-image">
                     <a href="/stories/edit/{{id}}" class="btn-floating halfway-fab waves-effect waves-light red"
                         title="Edit your story"><i class="material-icons">create</i></a>
                 </div>
-              
+                {{/ifEquals}}
                 <div class="text-card card-content">
-                     <div class="card-title">{{title}}</div>
-                    {{stripTags (truncate body 150)}}</div>
-                 
-                <div class="chip grey white-text">
-                    <img src="{{user.image}}">
-                    {{user.firstName}} {{user.lastName}}
+                    <div class="card-title">{{title}}</div>
+                    {{{stripTags (truncate body 150)}}}
                 </div>
+                <a href="/stories/user/{{user.id}}">
+                    <div class="chip grey white-text">
+                        <img src="{{user.image}}">
+                        {{user.firstName}} {{user.lastName}}
+                    </div>
+                </a>
+
                 <div class="card-action">
                     <a href="/stories/show/{{id}}" class="btn teal darken-4">READ MORE >></a>
                 </div>
