--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -1,7 +1,11 @@
 <div class="container padTopBot">
     <div class="row">
         <div class="col s12 m8">
-            <h3 class="show-card">{{story.title}}</h3>
+            <h3 class="show-card">{{story.title}}
+                {{#ifEquals story.user._id '==' currentUser.id}}
+                <a href="/stories/edit/{{story.id}}"><i class="fa fa-pencil blue-text" aria-hidden="true">Edit</i></a>
+                {{/ifEquals}}
+            </h3>
             <span class="card-title grey-text">{{formatDate story.date 'MMMM Do YYYY, h:mm a'}}</span>
             <div class="card-panel blue lighten-5">
                 {{{story.body}}}
@@ -11,20 +15,23 @@
                 <h6 class="grey-text">Comments:</h6>
                 {{#each story.comments}}
                 <p>{{body}}</p>
-
-                <div class="chip grey white-text">
-                    <img src="{{user.image}}">
-                    {{user.firstName}} {{user.lastName}}
-                </div>
+                <a href="/stories/user/{{user.id}}">
+                    <div class="chip grey white-text">
+                        <img src="{{user.image}}">
+                        {{user.firstName}} {{user.lastName}}
+                    </div>
+                </a>
                 {{#ifEquals user.id '==' @root.currentUser.id}}
-                <a href="/stories/{{@root.story.id}}/comment/{{id}}/edit"><button
-                        class="blue white-text">Edit</button></a>
-                <form id="delete-comment-btn" action="/stories/{{@root.story.id}}/comment/{{id}}?_method=DELETE"
-                    method="post">
-                    <input type="hidden" name="_method" value="DELETE">
-                    <input type="submit" class="red white-text" value="delete"
-                        data-confirm="Are you sure you want to delete?">
-                </form>
+                <div id="editDelete">
+                    <a href="/stories/{{@root.story.id}}/comment/{{id}}/edit"
+                        class="btn-small blue white-text chip">Edit</a>
+                    <form id="delete-comment-btn" action="/stories/{{@root.story.id}}/comment/{{id}}?_method=DELETE"
+                        method="post">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="submit" class="btn-small red white-text chip" value="delete"
+                            data-confirm="Are you sure you want to delete?">
+                    </form>
+                </div>
                 <div><label>{{formatDate date 'MMMM Do YYYY, h:mm a'}}</label></div>
                 {{/ifEquals}}
                 <hr>
@@ -51,7 +58,7 @@
                 <div><span class="card-title black-text">{{story.user.firstName}} {{story.user.lastName}}</span></div>
                 <img class="circle responsive-img" src="{{story.user.image}}" width="200">
                 <div class="card-action">
-                    <a href="/dashboard" class="btn grey">Check My Stories</a>
+                    <a href="/stories/user/{{story.user.id}}" class="btn grey darken-1">Check My Stories</a>
                 </div>
             </div>
         </div>
