--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -4,9 +4,9 @@
             <div class="col s12 m8">
                 <div class="card-panel teal">
                     <div class="card-title"><h3>Welcome!</h3></div>
-                    <p class="white-text welcome-text">Welcome to weStories v1.0.0
+                    <p class="white-text welcome-text">Welcome to weStories v1.0.0.
                         Post stories from anything under the Sun!
-                        You can have post it publicly for the world
+                        You can post it publicly for the world
                         to see or privately as your personal Diary!<br>
                         <p class="yellow-text">(Upon Login, Click the red plus button to Add Story!)</p>
                     </p>
