--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -1,5 +1,6 @@
 <div class="container padTopBot">
-    <h3 class="show-card">Welcome, {{currentUser.firstName}}</h3>
+    <h3 class="show-card">Welcome, Pen Pal!</h3>
+    <p>Click the <span class="red-text"><strong>RED +</strong></span> button to add a Story.</p>
     <div class="divider"></div>
     <h4 class="show-card">Your Stories</h4>
     {{#if stories}}
