--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -18,7 +18,7 @@
                 <a href="/stories/user/{{user.id}}">
                     <div class="chip grey white-text">
                         <img src="{{user.image}}">
-                        {{user.firstName}} {{user.lastName}}
+                        {{user.penName}}
                     </div>
                 </a>
 
